--- a/sco.html
+++ b/sco.html
@@ -33,9 +33,8 @@ animation: AnimationName 12s ease infinite;">
         </div>
 
         <section class="content">
-            <!-- <h2 style="font-size: 40px;margin:0px;">Strategy</h2> -->
+            <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Strategy</h1>
             <article id="TargetAudience">
-
                 <h2 style="font-style: bold;font-size: 40px;margin:0px;">Target Audience</h4>
                     <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
 
@@ -55,8 +54,58 @@ animation: AnimationName 12s ease infinite;">
                         <p style="font-style: italic;">No feedback provided yet.</p>
                     </div>
             </article>
-
-            <!-- <h2 style="font-size: 40px;margin:0px;">Concept</h2> -->
+            <article id="strategy_analysis">
+                <h2 style="font-size:40px;margin:0px;">Strategy Analysis</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="customer_journey">
+                <h2 style="font-size:40px;margin:0px;">Customer Journey</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="brand_value">
+                <h2 style="font-size:40px;margin:0px;">Brand Value</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="brand_guide">
+                <h2 style="font-size:40px;margin:0px;">Brand Guide</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="onlinemediastrategy">
+                <h2 style="font-size:40px;margin:0px;">Online Media Strategy</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <br/>
+            <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Concepting</h1>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
@@ -90,6 +139,16 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+            <article id="logo_design">
+                <h2 style="font-size:40px;margin:0px;">Logo Design</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
             <!-- <h1 style="font-style: italic;font-size: 40px;margin: 20px 0px 0px 0px;">Sprint 2</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Magazine Layout</h2>
@@ -100,14 +159,23 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+            <article id="interaction_design">
+                <h2 style="font-size:40px;margin:0px;">Interaction Design</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
         </section>
     </div>
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <!-- <a href="dev.html">Development</a> -->
-        <a href="" style="color: grey;">Development[WIP]</a>
-
+        <a href="dev.html">Development</a>
+        <!-- <a href="" style="color: grey;">Development[WIP]</a> -->
         <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
         <a href="ptm.html">Project</a>
