--- a/ux.html
+++ b/ux.html
@@ -97,6 +97,36 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
+            <article id="task_analysis">
+                <h2 style="font-size:40px;margin:0px;">Task Analysis</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="card_sorting">
+                <h2 style="font-size:40px;margin:0px;">Card Sorting</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="user_test">
+                <h2 style="font-size:40px;margin:0px;">User Test</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
             <br />
             <h1 style="text-align:center;font-style: bold;font-size: 40px;margin: 20px 0px 0px 0px;">Prototype
             </h1>
@@ -110,9 +140,50 @@ animation: AnimationName 12s ease infinite;">
                 <img class="contentAttachment" src="content/storyboard.png"></img>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <p style="font-style: italic;">As feedback from Jo-An the storyboard looks nice and understandable. I now know that a storyboard can be a useful tool for UX design.</p>
+                    <p style="font-style: italic;">As feedback from Jo-An the storyboard looks nice and understandable.
+                        I now know that a storyboard can be a useful tool for UX design.</p>
                 </div>
-
+            </article>
+            <article id="paper_prototype">
+                <h2 style="font-size:40px;margin:0px;">Paper Prototype</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="arduino_workshop">
+                <h2 style="font-size:40px;margin:0px;">Arduino Workshop</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="physical_prototype">
+                <h2 style="font-size:40px;margin:0px;">Physical Prototype</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
+            <article id="video_prototype">
+                <h2 style="font-size:40px;margin:0px;">Video Prototype</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla congue maximus purus, sed mollis
+                    lectus consequat et.</p>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <p style="font-style: italic;">No feedback provided yet.</p>
+                </div>
+            </article>
     </div>
     </article>
     <!-- <article>
@@ -125,8 +196,8 @@ animation: AnimationName 12s ease infinite;">
     <!-- OFF-CANVAS MENU____________________________________________________________________________________________________________ -->
     <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <!-- <a href="dev.html">Development</a> -->
-        <a href="" style="color: grey;">Development[WIP]</a>
+        <a href="dev.html">Development</a>
+        <!-- <a href="" style="color: grey;">Development[WIP]</a> -->
 
         <a href="ux.html">UX</a>
         <a href="sco.html">Strategy & Concept</a>
