--- a/ptm.html
+++ b/ptm.html
@@ -27,7 +27,7 @@ animation: AnimationName 12s ease infinite;">
             </button>
         </header>
 
-        <!-- <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe> -->
+        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
             Project
