--- a/sco.html
+++ b/sco.html
@@ -26,7 +26,7 @@ animation: AnimationName 12s ease infinite;">
             </button>
         </header>
 
-        <!-- <iframe class="visualiframe" src="visual3.html" frameborder="0" style="position: fixed;"></iframe> -->
+        <iframe class="visualiframe" src="visual3.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
             Strategy & Concept
