--- a/dev.html
+++ b/dev.html
@@ -33,6 +33,8 @@ animation: AnimationName 12s ease infinite;">
             Development
         </div>
         <section class="content">
+                <p>[Learning outcome placeholder]</p>
+            
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Learning About Front-End Web Development Basics</h2>
