--- a/ptm.html
+++ b/ptm.html
@@ -33,6 +33,7 @@ animation: AnimationName 12s ease infinite;">
             Project
         </div>
         <section class="content">
+                <p>[Learning outcome placeholder]</p>
                 <article id="ptmprologue"></article>
             <article id="artistic_exploration">
                 <h2 style="font-size: 40px;margin:0px;">Artistic Exploration</h2>
