--- a/ux.html
+++ b/ux.html
@@ -67,6 +67,7 @@ animation: AnimationName 12s ease infinite;">
                         outcome.</p>
                 </article>
             </section> -->
+            <p>[Learning outcome placeholder]</p>
             <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
             <article id="interview">
                 <h2 style="font-size:40px;margin:0px;">The Interview</h2>
