--- a/sco.html
+++ b/sco.html
@@ -33,6 +33,8 @@ animation: AnimationName 12s ease infinite;">
         </div>
 
         <section class="content">
+                <p>[Learning outcome placeholder]</p>
+
             <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Strategy</h1>
             <article id="TargetAudience">
                 <h2 style="font-style: bold;font-size: 40px;margin:0px;">Target Audience</h4>
