--- a/dev.html
+++ b/dev.html
@@ -27,7 +27,7 @@ animation: AnimationName 12s ease infinite;">
             </button>
         </header>
 
-        <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
+        <iframe class="visualiframe" src="visual3.html" frameborder="0" style="position: fixed;"></iframe>
 
         <div id="title">
             Development
@@ -80,6 +80,16 @@ animation: AnimationName 12s ease infinite;">
                 <img src="" class="feedbackThumbnail"></img>
                 <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
             </div>
+            <article>
+                    <h2 style="font-size: 40px;margin:0px;">Sassy Cascading Style Sheets</h2>
+                    <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                </article>
+                <div class="feedback">
+                    <h1>Feedback</h1>
+                    <img src="" class="feedbackThumbnail"></img>
+                    <p style="font-style: italic;">"I managed to learn SCSS within a week after asking Erik of its funtionality as i find it to be super useful tool."</p>
+                </div>
             <!-- <article>
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Lorem</h2>
             </article> -->
