--- a/dev.html
+++ b/dev.html
@@ -78,7 +78,7 @@ animation: AnimationName 12s ease infinite;">
             <div class="feedback">
                 <h1>Feedback</h1>
                 <img src="" class="feedbackThumbnail"></img>
-                <p style="font-style: italic;">"Lorem ipsum dolor sit amet."</p>
+                <p style="font-style: italic;">"No feedback provided yet."</p>
             </div>
             <article>
                     <h2 style="font-size: 40px;margin:0px;">Sassy Cascading Style Sheets</h2>
@@ -88,7 +88,7 @@ animation: AnimationName 12s ease infinite;">
                 <div class="feedback">
                     <h1>Feedback</h1>
                     <img src="" class="feedbackThumbnail"></img>
-                    <p style="font-style: italic;">"I managed to learn SCSS within a week after asking Erik of its funtionality as i find it to be super useful tool."</p>
+                    <p style="font-style: italic;">"I managed to learn SCSS within a week after asking Erik of its functionality as i find it to be super useful tool."</p>
                 </div>
             <!-- <article>
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Lorem</h2>
