--- a/dev.html
+++ b/dev.html
@@ -77,7 +77,7 @@ animation: AnimationName 12s ease infinite;">
             </article>
             <div class="feedback">
                 <h1>Feedback</h1>
-                <img src="" class="feedbackThumbnail"></img>
+                <!-- <img src="" class="feedbackThumbnail"></img> -->
                 <p style="font-style: italic;">"No feedback provided yet."</p>
             </div>
             <article>
@@ -87,7 +87,7 @@ animation: AnimationName 12s ease infinite;">
                 </article>
                 <div class="feedback">
                     <h1>Feedback</h1>
-                    <img src="" class="feedbackThumbnail"></img>
+                    <!-- <img src="" class="feedbackThumbnail"></img> -->
                     <p style="font-style: italic;">"I managed to learn SCSS within a week after asking Erik of its functionality as i find it to be super useful tool."</p>
                 </div>
             <!-- <article>
