scroll fix implementation

--- a/dev.html
+++ b/dev.html
@@ -32,7 +32,7 @@ animation: AnimationName 12s ease infinite;">
         <div id="title">
             Development
         </div>
-        <section class="content">
+        <section id="content">
                 <p>[Learning outcome placeholder]</p>
             
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
