scrolling issue hotfix

--- a/dev.html
+++ b/dev.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body style="background: linear-gradient(270deg, #0000ff, #ff0000);
@@ -33,8 +34,8 @@ animation: AnimationName 12s ease infinite;">
             Development
         </div>
         <section id="content">
-                <p>[Learning outcome placeholder]</p>
-            
+            <p>[Learning outcome placeholder]</p>
+
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Learning About Front-End Web Development Basics</h2>
@@ -48,9 +49,9 @@ animation: AnimationName 12s ease infinite;">
                 </p>
             </article>
             <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
+                <h1>Feedback</h1>
+                <p style="font-style: italic;">No feedback provided yet.</p>
+            </div>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Source Control, A Life Saving Tool</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 1</h1>
@@ -59,9 +60,9 @@ animation: AnimationName 12s ease infinite;">
                     track of each revision and to also experiment implementing or whether to discard it.</p>
             </article>
             <div class="feedback">
-                    <h1>Feedback</h1>
-                    <p style="font-style: italic;">No feedback provided yet.</p>
-                </div>
+                <h1>Feedback</h1>
+                <p style="font-style: italic;">No feedback provided yet.</p>
+            </div>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Honing JavaScript</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
@@ -81,15 +82,16 @@ animation: AnimationName 12s ease infinite;">
                 <p style="font-style: italic;">"No feedback provided yet."</p>
             </div>
             <article>
-                    <h2 style="font-size: 40px;margin:0px;">Sassy Cascading Style Sheets</h2>
-                    <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                </article>
-                <div class="feedback">
-                    <h1>Feedback</h1>
-                    <!-- <img src="" class="feedbackThumbnail"></img> -->
-                    <p style="font-style: italic;">"I managed to learn SCSS within a week after asking Erik of its functionality as i find it to be super useful tool."</p>
-                </div>
+                <h2 style="font-size: 40px;margin:0px;">Sassy Cascading Style Sheets</h2>
+                <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 2</h1>
+                <p>Lorem ipsum dolor sit amet.</p>
+            </article>
+            <div class="feedback">
+                <h1>Feedback</h1>
+                <!-- <img src="" class="feedbackThumbnail"></img> -->
+                <p style="font-style: italic;">"I managed to learn SCSS within a week after asking Erik of its
+                    functionality as i find it to be super useful tool."</p>
+            </div>
             <!-- <article>
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Lorem</h2>
             </article> -->
@@ -109,7 +111,6 @@ animation: AnimationName 12s ease infinite;">
     <script src="js/OrbitControls.js"></script>
     <script src="js/main.js"></script>
     <footer style="font-size: 10vw;">NOT FINAL</footer>
-
 </body>
 
 </html>
