--- a/ux.html
+++ b/ux.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body style="background: linear-gradient(270deg, #0000ff, #ff0000);
@@ -33,7 +34,7 @@ animation: AnimationName 12s ease infinite;">
             UX
         </div>
 
-        <section class="content">
+        <section id="content">
 
             <!-- <section id="prologue" style="padding:0px;background:rgba(0,0,0,0.75);color: white; padding: 30px 30px 30px; margin-top: 20px;">
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Essentials of User-Centered Design</h2>
