--- a/sco.html
+++ b/sco.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,700,700i&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 
 <body style="background: linear-gradient(270deg, #0000ff, #ff0000);
@@ -32,7 +33,7 @@ animation: AnimationName 12s ease infinite;">
             Strategy & Concept
         </div>
 
-        <section class="content">
+        <section id="content">
                 <p>[Learning outcome placeholder]</p>
 
             <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Strategy</h1>
