Added learning outcome section

--- a/dev.html
+++ b/dev.html
@@ -33,9 +33,13 @@ animation: AnimationName 12s ease infinite;">
         <div id="title">
             Development
         </div>
+        <div class="learningOutcome">
+            <h1 style="text-align: center;font-size: 40px;">Learning Outcome</h1>
+            <p style="text-align: center;">You develop media products by programming and integrating proofs of concepts
+                based on validated requirements.</p>
+            <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
+        </div><br />
         <section id="content">
-            <p>[Learning outcome placeholder]</p>
-
             <!-- <h1 style="font-size: 4vw; padding:0; margin:0;">Development</h1> -->
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Learning About Front-End Web Development Basics</h2>
@@ -110,7 +114,7 @@ animation: AnimationName 12s ease infinite;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/main.js"></script>
-    <footer style="font-size: 10vw;">NOT FINAL</footer>
+    <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
 </body>
 
 </html>
