--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ animation: AnimationName 12s ease infinite;">
         <iframe class="visualiframe" src="visual1.html" frameborder="0" style="position: fixed;"></iframe>
 
         <!-- Content -->
-        <section class="content" style="margin-top: 8vw; position: fixed;background: none;color: white;box-shadow: none;">
+        <section class="content" style="margin-top: 0; position: fixed;background: none;color: white;box-shadow: none;">
             <h1
                 style="margin-bottom: 0px; font-size: 72px; font-weight: bold;
     font-style: italic; color: rgb(255, 255, 255); font-style: italic; font-weight: bold; color: rgba(255, 255, 255, 1);">
