--- a/ptm.html
+++ b/ptm.html
@@ -33,6 +33,12 @@ animation: AnimationName 12s ease infinite;">
         <div id="title">
             Project
         </div>
+
+        <div class="learningOutcome">
+            <h1 style="text-align: center;font-style: 40px;">Learning Outcome</h1>
+            <p style="text-align: center;">You deliver complete media products for your client that meet the client’s needs.</p>
+        </div>
+
         <section id="content">
                 <p>[Learning outcome placeholder]</p>
                 <article id="ptmprologue"></article>
@@ -65,7 +71,7 @@ animation: AnimationName 12s ease infinite;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/main.js"></script>
-    <footer style="font-size: 10vw;">NOT FINAL</footer>
+    <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
 
 </body>
 
