--- a/sco.html
+++ b/sco.html
@@ -33,9 +33,16 @@ animation: AnimationName 12s ease infinite;">
             Strategy & Concept
         </div>
 
-        <section id="content">
-                <p>[Learning outcome placeholder]</p>
+        <div class="learningOutcome">
+            <h1 style="text-align: center;font-style: 40px;">Learning Outcome</h1>
+            <p style="text-align: center;">A. You develop a consistent and distinctive brand strategy and visual
+                identity based on target audience analysis.</p>
+            <p style="text-align: center;">B. You create media products for your client by using experiments, iterations
+                and examples from the professional field.</p>
+            <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
+        </div><br />
 
+        <section id="content">
             <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Strategy</h1>
             <article id="TargetAudience">
                 <h2 style="font-style: bold;font-size: 40px;margin:0px;">Target Audience</h4>
@@ -43,14 +50,20 @@ animation: AnimationName 12s ease infinite;">
 
                     <p>When it comes to branding a musician, it's imperative to know who the 'target audience' is, and
                         how to reach them. In order to get the general idea of the target audience, 'personas' can be
-                        used to visualize the target audience. </p>
+                        <div class="learningOutcome">
+                            <h1 style="text-align: center;">Learning Outcome</h1>
+                            <p style="text-align: center;">You design prototypes and user research, based on preselected
+                                methodologies and on user consults.</p>
+                            <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
+                        </div> used to visualize the target audience. </p>
                     <!-- <p>In this assignment i have made a few personas(in
                         chronological order) of one of my groupmates, my personal favorite artist, and the target
                         audience of the client.</p> -->
                     <!-- <a href="content/SCO_target_audience_1.jpg">Target audience exercise 1</a>
                     <a href="" style="color: grey;">Target audience exercise 2</a>
                     <a href="" style="color: grey;">Target audience exercise 3</a> -->
-                    <p>In this assignment i have made a persona of one of my groupmates as an exercise to visualize a target audience.</p>
+                    <p>In this assignment i have made a persona of one of my groupmates as an exercise to visualize a
+                        target audience.</p>
                     <img class="contentAttachment" src="content/SCO_target_audience_1.jpg" alt="Missing file">
                     <div class="feedback">
                         <h1>Feedback</h1>
@@ -107,7 +120,7 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <br/>
+            <br />
             <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Concepting</h1>
             <article>
                 <h2 style="font-size: 40px;margin:0px;">Visual Association</h2>
@@ -188,7 +201,7 @@ animation: AnimationName 12s ease infinite;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/main.js"></script>
-    <footer style="font-size: 10vw;">NOT FINAL</footer>
+    <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
 
 
 </body>
