--- a/ux.html
+++ b/ux.html
@@ -34,8 +34,18 @@ animation: AnimationName 12s ease infinite;">
             UX
         </div>
 
-        <section id="content">
+        <div class="learningOutcome">
+            <h1 style="text-align: center;font-size: 40px;">Learning Outcome</h1>
+            <p style="text-align: center;">You design prototypes and user research, based on preselected methodologies
+                and on user consults. </p>
+            <!-- <p style="font-style: italic;">No feedback provided yet.</p> -->
+        </div><br />
 
+        <div class="contentDivider">
+            <h1 style="text-align:center;font-style:italic;font-size: 40px;">Research</h1>
+        </div>
+
+        <section id="content">
             <!-- <section id="prologue" style="padding:0px;background:rgba(0,0,0,0.75);color: white; padding: 30px 30px 30px; margin-top: 20px;">
                 <h2 style="font-style: italic;font-size: 40px;margin:0px;">Essentials of User-Centered Design</h2>
                 <article>
@@ -68,8 +78,6 @@ animation: AnimationName 12s ease infinite;">
                         outcome.</p>
                 </article>
             </section> -->
-            <p>[Learning outcome placeholder]</p>
-            <h1 style="text-align:center;italic;font-size: 40px;margin: 20px 0px 0px 0px;">Research</h1>
             <article id="interview">
                 <h2 style="font-size:40px;margin:0px;">The Interview</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
@@ -129,9 +137,11 @@ animation: AnimationName 12s ease infinite;">
                     <p style="font-style: italic;">No feedback provided yet.</p>
                 </div>
             </article>
-            <br />
-            <h1 style="text-align:center;font-style: bold;font-size: 40px;margin: 20px 0px 0px 0px;">Prototype
-            </h1>
+        </section><br />
+        <div class="contentDivider">
+            <h1 style="text-align:center;font-style:italic;font-size: 40px;">Prototype</h1>
+        </div>
+        <section id="content">
             <article id="storyboard">
                 <h2 style="font-size:40px;margin:0px;">Storyboard</h2>
                 <h1 style="font-style: italic;margin: 0px 0px 0px 0px;">Sprint 0</h1>
@@ -210,7 +220,7 @@ animation: AnimationName 12s ease infinite;">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/108/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/main.js"></script>
-    <footer style="font-size: 10vw;">NOT FINAL</footer>
+    <!-- <footer style="font-size: 10vw;">NOT FINAL</footer> -->
 
 
 </body>
